--- a/2.html
+++ b/2.html
@@ -182,7 +182,7 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-16">
             
             <!-- Games Link -->
-            <a href="/404" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.1s;">
+            <a href="https://trejduu32-code.github.io/games/404" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.1s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">404</h3>
@@ -195,7 +195,7 @@
             </a>
 
             <!-- Games by ExploitZ3r0 Link -->
-            <a href="/ant" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.2s;">
+            <a href="https://trejduu32-code.github.io/games/ant" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.2s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">ant game</h3>
@@ -208,7 +208,7 @@
             </a>
 
             <!-- Games ExploitZ3r0 Link -->
-            <a href="/bat" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.3s;">
+            <a href="https://trejduu32-code.github.io/games/bat" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.3s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">bat</h3>
@@ -221,7 +221,7 @@
             </a>
 
             <!-- QR Code Generator Link -->
-            <a href="/black" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.4s;">
+            <a href="https://trejduu32-code.github.io/games/black" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.4s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">blackhole game</h3>
@@ -234,7 +234,7 @@
             </a>
 			
 			<!-- Games by ExploitZ3r0 Link -->
-            <a href="/game" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.2s;">
+            <a href="https://trejduu32-code.github.io/games/game" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.2s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">game</h3>
@@ -246,7 +246,7 @@
                 </div>
 			 </a>
           <!-- QR Code Generator Link -->
-            <a href="/nova" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.4s;">
+            <a href="https://trejduu32-code.github.io/games/nova" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.4s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">nova</h3>
@@ -259,7 +259,7 @@
             </a>			 
 			
 			<!-- QR Code Generator Link -->
-            <a href="/obby" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.4s;">
+            <a href="https://trejduu32-code.github.io/games/obby" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.4s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">obby</h3>
@@ -271,7 +271,7 @@
                 </div>
             </a>
 			<!-- QR Code Generator Link -->
-            <a href="/up" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.4s;">
+            <a href="https://trejduu32-code.github.io/games/up" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.4s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">up</h3>
