Update game links to point to new URLs

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-16">
             
             <!-- Games Link -->
-            <a href="/chatai" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.1s;">
+            <a href="https://trejduu32-code.github.io/games/chatai" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.1s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">chatai</h3>
@@ -196,7 +196,7 @@
             </a>
 
             <!-- Games by ExploitZ3r0 Link -->
-            <a href="/idk1" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.2s;">
+            <a href="https://trejduu32-code.github.io/games/idk1" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.2s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">idk1</h3>
@@ -209,7 +209,7 @@
             </a>
 
             <!-- Games ExploitZ3r0 Link -->
-            <a href="/v11" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.3s;">
+            <a href="https://trejduu32-code.github.io/games/v11" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.3s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">v11</h3>
@@ -222,7 +222,7 @@
             </a>
 
             <!-- QR Code Generator Link -->
-            <a href="/1" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.4s;">
+            <a href="https://trejduu32-code.github.io/games/1" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.4s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">tinyurl</h3>
@@ -235,7 +235,7 @@
             </a>
 
             <!-- V111 Link -->
-            <a href="/brainfuck" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.5s;">
+            <a href="https://trejduu32-code.github.io/games/brainfuck" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.5s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">Brainfuck Converter</h3>
@@ -261,7 +261,7 @@
             </a>
 
             <!-- URL AI Link -->
-            <a href="/2" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.7s;">
+            <a href="https://trejduu32-code.github.io/games/2" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.7s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">Animations and games</h3>
@@ -273,7 +273,7 @@
                 </div>
             </a>
 			<!-- mysite -->
-            <a href="/my" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.7s;">
+            <a href="https://trejduu32-code.github.io/games/my" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.7s;">
                 <div class="flex items-center justify-between">
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">cool</h3>
