Update script source URLs in index.html

--- a/idk/index.html
+++ b/idk/index.html
@@ -75,7 +75,7 @@
                     <h3 class="option-title">Standard Version</h3>
                 </div>
                 <div class="instruction-line">
-                    <code id="line1">&lt;script src="URL/bot/exploitz3r0bot.js"&gt;&lt;/script&gt;</code>
+                    <code id="line1">&lt;script src="https://trejduu32-code.github.io/games/bot/exploitz3r0bot.js"&gt;&lt;/script&gt;</code>
                     <button class="copy-btn" onclick="copyToClipboard('line1')">Copy</button>
                 </div>
                 <p class="option-description">Full featured version with detailed logging and debugging capabilities. Recommended for production environments.</p>
@@ -86,7 +86,7 @@
                     <h3 class="option-title">Minified Version</h3>
                 </div>
                 <div class="instruction-line">
-                    <code id="line2">&lt;script src="URL/bot/exploitz3r0bot.min.js"&gt;&lt;/script&gt;</code>
+                    <code id="line2">&lt;script src="https://trejduu32-code.github.io/games/bot/exploitz3r0bot.min.js"&gt;&lt;/script&gt;</code>
                     <button class="copy-btn" onclick="copyToClipboard('line2')">Copy</button>
                 </div>
                 <p class="option-description">Compressed version for faster loading. Great for testing but not recommended for production due to limited debugging capabilities.</p>
