--- a/idk/index.html
+++ b/idk/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://exploitz3r0bot.neocities.org" />
     <meta property="og:image" content="https://teapottool.neocities.org/teapot-preview.png" />
     <meta name="theme-color" content="#00ff00">
-    <meta name="description" content="ExploitZ3r0BOT - Military-grade bot protection. Deploy advanced security with a single line of code." />
+    <meta name="description" content="ExploitZ3r0BOT - Military-grade bot protection. Deploy advanced security with a single line of code if you dont know how to add the line of code i made a automatic code adder here https://dir.base44.app just put your html file and automaticly adds the line of code and dowload button to dowload the modified html." />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Orbitron:wght@500;600;700;800;900&display=swap" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Orbitron:wght@500;600;700;800;900&display=swap"></noscript>
     <link rel="stylesheet" href="styles.css">
