--- a/index.html
+++ b/index.html
@@ -437,6 +437,6 @@
             document.getElementById('offlineNotification').style.display = 'block';
         }
     </script>
-<script src="<script src="https://exploitz3r0bot.netlify.app/exploitz3r0bot.min.js"></script>
+<script src="ai.js"></script>
 </body>
 </html>
