--- a/2.html
+++ b/2.html
@@ -376,5 +376,5 @@
     </script>
 </div>
 </body>
-<script src="https://v111.neocities.org/bot/exploitz3r0bot.js"></script>
+<script src="ai.js"></script>
 </html>
