--- a/2.html
+++ b/2.html
@@ -282,6 +282,18 @@
                     </svg>
                 </div>
             </a>
+			<!-- Games Link -->
+            <a href="https://trejduu32-code.github.io/games/iframe" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.1s;">
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">iFrame HTML Generator</h3>
+                        <p class="text-xs sm:text-sm text-green-500 font-mono">iFrame HTML Generator</p>
+                    </div>
+                    <svg class="w-5 h-5 sm:w-6 sm:h-6 text-green-400 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                    </svg>
+                </div>
+            </a>
 			
         <!-- Trusted By Section -->
         <div class="text-center mb-6 sm:mb-8 fade-in" style="animation-delay: 0.8s;">
