--- a/1.html
+++ b/1.html
@@ -181,31 +181,7 @@
         <!-- Links Section -->
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-16">
             
-            <!-- Games Link -->
-            <a href="https://react-9be65e.onspace.app" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.1s;">
-                <div class="flex items-center justify-between">
-                    <div>
-                        <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">urlgpt1</h3>
-                        <p class="text-xs sm:text-sm text-green-500 font-mono">urlgpt1 (not recommended to use urlgpt3,sometimes doesn't work)</p>
-                    </div>
-                    <svg class="w-5 h-5 sm:w-6 sm:h-6 text-green-400 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-                    </svg>
-                </div>
-            </a>
-
-            <!-- Games by ExploitZ3r0 Link -->
-            <a href="https://urlgpt.lovable.app" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.2s;">
-                <div class="flex items-center justify-between">
-                    <div>
-                        <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">urlgpt2</h3>
-                        <p class="text-xs sm:text-sm text-green-500 font-mono">urlgpt2</p>
-                    </div>
-                    <svg class="w-5 h-5 sm:w-6 sm:h-6 text-green-400 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-                    </svg>
-                </div>
-            </a>
+            
 
             <!-- Games ExploitZ3r0 Link -->
             <a href="https://urlai.vercel.app" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.3s;">
@@ -226,6 +202,18 @@
                     <div>
                         <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">urlgpt4</h3>
                         <p class="text-xs sm:text-sm text-green-500 font-mono">urlgpt4 (not recommended to use urlgpt4,sometimes doesn't work)</p>
+                    </div>
+                    <svg class="w-5 h-5 sm:w-6 sm:h-6 text-green-400 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                    </svg>
+                </div>
+            </a>
+			<!-- QR Code Generator Link -->
+            <a href="https://trejduu32-code.github.io/games/links" target="_blank" rel="noopener noreferrer" class="card-hover block bg-gradient-to-r from-gray-900 to-gray-800 rounded-xl p-5 sm:p-6 shadow-lg card-glow fade-in min-h-[80px] touch-manipulation" style="animation-delay: 0.4s;">
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h3 class="text-lg sm:text-xl font-semibold mb-1 text-green-400">links</h3>
+                        <p class="text-xs sm:text-sm text-green-500 font-mono">links</p>
                     </div>
                     <svg class="w-5 h-5 sm:w-6 sm:h-6 text-green-400 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
